@@ -4,6 +4,14 @@ Changelog for GEMC
 3/9/17
  - added beagle open file in primary generator for ascii
  - stopping run manager if no more events in the LUND or BEAGLE format
+ - if:
+
+   * gemc in in batch mode;
+   * N is not set explicitely;
+   * an external input file is used
+
+   Then gemc will run through all the events in the input file.
+
 
 3/7/17
  - added linear interpolation for dipole fields
